[package]
name = "udp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.25.0", features = ["full"] }
rand = "0.8.5"
fltk = "1.3.29"
chrono = "0.4.19"