[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
serde = { version = "1.0.152", features = ["derive"] }

[lib]
name = "moonlight_structs"
path = "src/moonlight_structs.rs"
